Revert "Zero allocations"